[tool.poetry]
name = "reusable_mongodb_connection"
version = "0.1.0"
description = ""
authors = ["unrndm <unrndm@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
